@@ -11,24 +11,23 @@ set(CMAKE_REQUIRED_INCLUDES "${PROJECT_SOURCE_DIR}/include")
 
 check_cxx_source_compiles("
     // GCC/Clang function multiversioning for AVX512 is not needed if
-    // the user compiles with -mavx512f -mavx512vpopcntdq -mbmi2.
+    // the user compiles with -mavx512f -mavx512vpopcntdq.
     // GCC/Clang function multiversioning generally causes a minor
     // overhead, hence we disable it if it is not needed.
     #if defined(__AVX512F__) && \
-        defined(__AVX512VPOPCNTDQ__) && \
-        defined(__BMI2__)
-      Error: AVX512 BMI2 multiarch not needed!
+        defined(__AVX512VPOPCNTDQ__)
+      Error: AVX512 VPOPCNT multiarch not needed!
     #endif
 
-    #include <cpu_supports_avx512_bmi2.hpp>
+    #include <cpu_supports_avx512_vpopcnt.hpp>
     #include <immintrin.h>
     #include <stdint.h>
 
     class Sieve {
     public:
         uint64_t count_default(uint64_t* array, uint64_t stop_idx);
-        __attribute__ ((target (\"avx512f,avx512vpopcntdq,bmi2\")))
-        uint64_t count_avx512_bmi2(uint64_t* array, uint64_t stop_idx);
+        __attribute__ ((target (\"avx512f,avx512vpopcntdq\")))
+        uint64_t count_avx512_vpopcnt(uint64_t* array, uint64_t stop_idx);
     };
 
     uint64_t Sieve::count_default(uint64_t* array, uint64_t stop_idx)
@@ -39,20 +38,23 @@ check_cxx_source_compiles("
         return res;
     }
 
-    __attribute__ ((target (\"avx512f,avx512vpopcntdq,bmi2\")))
-    uint64_t Sieve::count_avx512_bmi2(uint64_t* array, uint64_t stop_idx)
+    __attribute__ ((target (\"avx512f,avx512vpopcntdq\")))
+    uint64_t Sieve::count_avx512_vpopcnt(uint64_t* array, uint64_t stop_idx)
     {
         uint64_t i = 0;
         __m512i vcnt = _mm512_setzero_si512();
-        do
+
+        for (; i + 8 < stop_idx; i += 8)
         {
-          __mmask8 mask = (i + 8 < stop_idx) ? 0xff : (__mmask8) _bzhi_u64(0xff, stop_idx - i);
-          __m512i vec = _mm512_maskz_loadu_epi64(mask , &array[i]);
-          vec = _mm512_popcnt_epi64(vec);
-          vcnt = _mm512_add_epi64(vcnt, vec);
-          i += 8;
+            __m512i vec = _mm512_loadu_epi64(&array[i]);
+            vec = _mm512_popcnt_epi64(vec);
+            vcnt = _mm512_add_epi64(vcnt, vec);
         }
-        while (i < stop_idx);
+
+        __mmask8 mask = 0xff >> (stop_idx - i);
+        __m512i vec = _mm512_maskz_loadu_epi64(mask , &array[i]);
+        vec = _mm512_popcnt_epi64(vec);
+        vcnt = _mm512_add_epi64(vcnt, vec);
         return _mm512_reduce_add_epi64(vcnt);
     }
 
@@ -62,8 +64,8 @@ check_cxx_source_compiles("
         uint64_t cnt = 0;
         Sieve sieve;
 
-        if (cpu_supports_avx512_bmi2)
-            cnt = sieve.count_avx512_bmi2(&array[0], 10);
+        if (cpu_supports_avx512_vpopcnt)
+            cnt = sieve.count_avx512_vpopcnt(&array[0], 10);
         else
             cnt = sieve.count_default(&array[0], 10);
 
@@ -72,7 +74,7 @@ check_cxx_source_compiles("
 " multiarch_avx512_vpopcnt)
 
 if(multiarch_avx512_vpopcnt)
-    set(ENABLE_MULTIARCH "ENABLE_MULTIARCH_AVX512_BMI2")
+    set(ENABLE_MULTIARCH "ENABLE_MULTIARCH_AVX512_VPOPCNT")
 endif()
 
 cmake_pop_check_state()
